modify run notebook

--- a/run.ipynb
+++ b/run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -23,49 +23,223 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Start:\t 2024-09-20 23:04:26.264874 \n",
+      "Start:\t 2024-09-21 23:29:34.741424 \n",
+      "\n",
+      "Warning: Grammar contains unit production for production rule <fc>\n",
+      "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <deff>\n",
+      "         Unit productions consume GE codons.\n",
+      "Warning: Grammar contains unit production for production rule <callf>\n",
+      "         Unit productions consume GE codons.\n",
+      "Evolution: 0% complete\n",
+      "Evolution: 0% complete\n",
+      "Evolution: 1% complete\n",
+      "Evolution: 2% complete\n",
+      "Evolution: 3% complete\n",
+      "Evolution: 4% complete\n",
+      "Evolution: 5% complete\n",
+      "Evolution: 6% complete\n",
+      "Evolution: 7% complete\n",
+      "Evolution: 8% complete\n",
+      "Evolution: 9% complete\n",
+      "Evolution: 10% complete\n",
+      "Evolution: 11% complete\n",
+      "Evolution: 12% complete\n",
+      "Evolution: 13% complete\n",
+      "Evolution: 14% complete\n",
+      "Evolution: 15% complete\n",
+      "Evolution: 16% complete\n",
+      "Evolution: 17% complete\n",
+      "Evolution: 18% complete\n",
+      "Evolution: 19% complete\n",
+      "Evolution: 20% complete\n",
+      "Evolution: 21% complete\n",
+      "Evolution: 22% complete\n",
+      "Evolution: 23% complete\n",
+      "Evolution: 24% complete\n",
+      "Evolution: 25% complete\n",
+      "Evolution: 26% complete\n",
+      "Evolution: 27% complete\n",
+      "Evolution: 28% complete\n",
+      "Evolution: 29% complete\n",
+      "Evolution: 30% complete\n",
+      "Evolution: 31% complete\n",
+      "Evolution: 32% complete\n",
+      "Evolution: 33% complete\n",
+      "Evolution: 34% complete\n",
+      "Evolution: 35% complete\n",
+      "Evolution: 36% complete\n",
+      "Evolution: 37% complete\n",
+      "Evolution: 38% complete\n",
+      "Evolution: 39% complete\n",
+      "Evolution: 40% complete\n",
+      "Evolution: 41% complete\n",
+      "Evolution: 42% complete\n",
+      "Evolution: 43% complete\n",
+      "Evolution: 44% complete\n",
+      "Evolution: 45% complete\n",
+      "Evolution: 46% complete\n",
+      "Evolution: 47% complete\n",
+      "Evolution: 48% complete\n",
+      "Evolution: 49% complete\n",
+      "Evolution: 50% complete\n",
+      "Evolution: 51% complete\n",
+      "Evolution: 52% complete\n",
+      "Evolution: 53% complete\n",
+      "Evolution: 54% complete\n",
+      "Evolution: 55% complete\n",
+      "Evolution: 56% complete\n",
+      "Evolution: 57% complete\n",
+      "Evolution: 58% complete\n",
+      "Evolution: 59% complete\n",
+      "Evolution: 60% complete\n",
+      "Evolution: 61% complete\n",
+      "Evolution: 62% complete\n",
+      "Evolution: 63% complete\n",
+      "Evolution: 64% complete\n",
+      "Evolution: 65% complete\n",
+      "Evolution: 66% complete\n",
+      "Evolution: 67% complete\n",
+      "Evolution: 68% complete\n",
+      "Evolution: 69% complete\n",
+      "Evolution: 70% complete\n",
+      "Evolution: 71% complete\n",
+      "Evolution: 72% complete\n",
+      "Evolution: 73% complete\n",
+      "Evolution: 74% complete\n",
+      "Evolution: 75% complete\n",
+      "Evolution: 76% complete\n",
+      "Evolution: 77% complete\n",
+      "Evolution: 78% complete\n",
+      "Evolution: 79% complete\n",
+      "Evolution: 80% complete\n",
+      "Evolution: 81% complete\n",
+      "Evolution: 82% complete\n",
+      "Evolution: 83% complete\n",
+      "Evolution: 84% complete\n",
+      "Evolution: 85% complete\n",
+      "Evolution: 86% complete\n",
+      "Evolution: 87% complete\n",
+      "Evolution: 88% complete\n",
+      "Evolution: 89% complete\n",
+      "Evolution: 90% complete\n",
+      "Evolution: 91% complete\n",
+      "Evolution: 92% complete\n",
+      "Evolution: 93% complete\n",
+      "Evolution: 94% complete\n",
+      "Evolution: 95% complete\n",
+      "Evolution: 96% complete\n",
+      "Evolution: 97% complete\n",
+      "Evolution: 98% complete\n",
+      "Evolution: 99% complete\n",
+      "Evolution: 99% complete\n",
+      "\n",
+      "\n",
+      "Best:\n",
+      "  Fitness:\t nan\n",
+      "  Phenotype: def fun(price_data):\n",
+      "  from numba import njit\n",
+      "  @njit\n",
+      "  def merge_pnl(arr1, arr2):\n",
+      "    out = np.zeros((len(arr1) + len(arr2)))\n",
+      "    idx = 1\n",
+      "    for i in range(len(arr1) + len(arr2)):\n",
+      "      if i % 2 == 0:\n",
+      "        out[i] = arr1[int(i/2)]\n",
+      "      else:\n",
+      "        out[i] = arr2[i-idx]\n",
+      "        idx += 1\n",
+      "    return out\n",
+      "  @njit\n",
+      "  def get_drawdowns(arr):\n",
+      "    drawdowns = np.zeros((len(arr)))\n",
+      "    max = arr[0]\n",
+      "    for i in range(1, len(drawdowns)-1):\n",
+      "      if arr[i-1] > arr[i] and arr[i] < arr[i+1]:\n",
+      "        min = arr[i]\n",
+      "        drawdowns[i] = max - min\n",
+      "      elif arr[i-1] < arr[i] and arr[i] > arr[i+1]:\n",
+      "        max = arr[i]\n",
+      "    return drawdowns\n",
+      "  df = price_data.copy()\n",
+      "  df[buy] = (df[high] > df[high]).astype(int)\n",
+      "  df[sell] = (df[high] == df[low]).astype(int)\n",
+      "  df[hold] = ((((df[open] >= df[open] >= df[open]) & ((df[close] >= df[close] != df[high]) & (RSI(df=data, HistLength=1) * df[close] <= 9.5 == df[open]) < df[open]) > df[high]) & (df[low] // df[high] != 9 == MA_DIFFERENCE(df=data, ShortLength=5, LongLength=4, Lag=7)) >= df[low]) & (df[open] % df[low] == 7 > df[low])).astype(int)\n",
+      "  df[signal] = df[buy] + df[sell] + df[hold]\n",
+      "  df[signal] = df[signal].apply(lambda x: 1 if x==1 else 0)\n",
+      "  df[hold] = df[hold].apply(lambda x: 1 if x==0 else 0)\n",
+      "  df[signal] = df[signal] * df[hold]\n",
+      "  df[sell] = df[sell] * (-1)\n",
+      "  df[signal] = df[signal] * df[sell]\n",
+      "  df[signal] = df[signal] * df[buy]\n",
+      "  df.drop(columns=[buy, sell, hold], inplace=True)\n",
+      "  buy_idxs = []\n",
+      "  sell_idxs = []\n",
+      "  is_buy = 0\n",
+      "  is_sell = 0\n",
+      "  for i, row in enumerate(df.itertuples()):\n",
+      "    if row.signal == 1 and is_buy == 0:\n",
+      "      buy_idxs.append(i+1)\n",
+      "      is_buy = 1\n",
+      "      is_sell = 0\n",
+      "    elif row.signal == -1 and is_sell == 0:\n",
+      "      sell_idxs.append(i+1)\n",
+      "      is_sell = 1\n",
+      "      is_buy = 0\n",
+      "  buy_prices = df[df.index.isin(buy_idxs)][open].values\n",
+      "  sell_prices = df[df.index.isin(sell_idxs)][open].values\n",
+      "  if buy_idxs[0] < sell_idxs[0]:\n",
+      "    buy_pnl = np.sum(sell_prices - buy_prices)\n",
+      "    sell_pnl = np.sum(sell_prices[:-1] - buy_prices[1:])\n",
+      "  else:\n",
+      "    sell_pnl = np.sum(sell_prices - buy_prices)\n",
+      "    buy_pnl = np.sum(sell_prices[1:] - buy_prices[:-1])\n",
+      "  total_pnl = buy_pnl + sell_pnl\n",
+      "  if buy_idxs[0] < sell_idxs[0]:\n",
+      "    buy_arr = sell_prices - buy_prices\n",
+      "    sell_arr = sell_prices[:-1] - buy_prices[1:]\n",
+      "    all_arr = merge_pnl(buy_arr, sell_arr)\n",
+      "  else:\n",
+      "    sell_arr = sell_prices - buy_prices\n",
+      "    buy_arr = sell_prices[1:] - buy_prices[:-1]\n",
+      "    all_arr = merge_pnl(sell_arr, buy_arr)\n",
+      "  equity_curve_arr = np.cumsum(all_arr)\n",
+      "  drawdowns = get_drawdowns(equity_curve_arr)\n",
+      "  avg_drawdown = np.sum(drawdowns[drawdowns!=0]) / len(drawdowns[drawdowns!=0])\n",
+      "  fitness = total_pnl / avg_drawdown\n",
+      "  return fitness\n",
+      "fitness = fun(data)\n",
+      "  Genome: [18527, 90967, 44030, 39403, 16094, 13078, 50318, 67833, 7192, 31389, 56137, 57193, 24557, 25518, 76597, 33186, 46037, 93474, 76977, 42965, 4702, 19776, 39504, 42126, 9593, 83898, 11143, 90890, 15401, 84911, 76658, 59641, 82417, 14397, 70471, 35939, 68325, 44914, 49122, 6873, 47207, 7466, 40163, 68411, 68479, 83524, 21233, 21509, 94922, 43599, 82960, 42965, 81949, 5735, 30524, 86907, 10608, 76669, 7983, 94107, 60863, 35939, 64522, 43864, 44657, 33140, 97274, 42268, 19512, 76572, 62632, 28080, 20822, 87265, 74751, 78689, 49342, 21509, 35328, 62632, 66777, 45786, 26734, 9018, 44910, 82255, 49815, 25766, 1160, 61111, 5730, 3884, 56387, 57314, 25943, 59771, 79, 63400, 91529, 21766, 73828, 84544, 26152, 57775, 19688, 34266, 32335, 88308, 56438, 48974, 39767, 64821, 49400, 68679, 33456, 10590, 24401, 9018, 28839, 14945, 341, 50318, 18228, 56137, 97847, 24557, 85592, 57065, 72925, 79189, 83989, 65464, 70155, 21004, 37522, 86221, 42582, 85006, 58828, 53364, 59650, 45647, 68098, 21922, 8461, 38126, 45419, 28177, 21914, 71982, 64721, 98961, 79347, 62751, 33258, 60478, 70396, 90640, 24613, 37356, 38456, 63748, 6158, 34778, 31570, 62278, 25498, 39602, 53291, 10286, 14074, 11336, 68671, 60395, 33202, 42054]\n",
+      "______\n",
+      "\n",
+      "  ave_fitness : \t nan\n",
+      "  ave_genome_length : \t 274.55\n",
+      "  ave_tree_depth : \t 9.454545454545455\n",
+      "  ave_tree_nodes : \t 106.17373737373737\n",
+      "  ave_used_codons : \t 65.50707070707071\n",
+      "  best_fitness : \t nan\n",
+      "  gen : \t 100\n",
+      "  invalids : \t 1475\n",
+      "  max_genome_length : \t 658\n",
+      "  max_tree_depth : \t 17.0\n",
+      "  max_tree_nodes : \t 385.0\n",
+      "  max_used_codons : \t 234.0\n",
+      "  min_genome_length : \t 34\n",
+      "  min_tree_depth : \t 5.0\n",
+      "  min_tree_nodes : \t 25.0\n",
+      "  min_used_codons : \t 15.0\n",
+      "  runtime_error : \t 0\n",
+      "  time_adjust : \t 0\n",
+      "  time_taken : \t 276.9262783527374\n",
+      "  total_inds : \t 50500\n",
+      "  total_time : \t 27480.926691293716\n",
+      "\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\vchar\\OneDrive\\Desktop\\ML Projects\\Upwork\\AlgoT_ML_Dev\\GrammarEvolution\\PonyGE2\\src\\ponyge.py\", line 31, in <module>\n",
-      "    mane()\n",
-      "  File \"C:\\Users\\vchar\\OneDrive\\Desktop\\ML Projects\\Upwork\\AlgoT_ML_Dev\\GrammarEvolution\\PonyGE2\\src\\ponyge.py\", line 21, in mane\n",
-      "    set_params(sys.argv[1:])  # exclude the ponyge.py arg itself\n",
-      "  File \"C:\\Users\\vchar\\OneDrive\\Desktop\\ML Projects\\Upwork\\AlgoT_ML_Dev\\GrammarEvolution\\PonyGE2\\src\\algorithm\\parameters.py\", line 317, in set_params\n",
-      "    set_param_imports()\n",
-      "  File \"C:\\Users\\vchar\\OneDrive\\Desktop\\ML Projects\\Upwork\\AlgoT_ML_Dev\\GrammarEvolution\\PonyGE2\\src\\utilities\\algorithm\\initialise_run.py\", line 99, in set_param_imports\n",
-      "    get_fit_func_imports()\n",
-      "  File \"C:\\Users\\vchar\\OneDrive\\Desktop\\ML Projects\\Upwork\\AlgoT_ML_Dev\\GrammarEvolution\\PonyGE2\\src\\utilities\\algorithm\\initialise_run.py\", line 243, in get_fit_func_imports\n",
-      "    params[op] = return_attr_from_module(module_name, attr_name)\n",
-      "  File \"C:\\Users\\vchar\\OneDrive\\Desktop\\ML Projects\\Upwork\\AlgoT_ML_Dev\\GrammarEvolution\\PonyGE2\\src\\utilities\\algorithm\\initialise_run.py\", line 262, in return_attr_from_module\n",
-      "    module = importlib.import_module(module_name)\n",
-      "  File \"c:\\Users\\vchar\\anaconda3\\envs\\crypto_trading\\lib\\importlib\\__init__.py\", line 126, in import_module\n",
-      "    return _bootstrap._gcd_import(name[level:], package, level)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 1050, in _gcd_import\n",
-      "  File \"<frozen importlib._bootstrap>\", line 1027, in _find_and_load\n",
-      "  File \"<frozen importlib._bootstrap>\", line 1006, in _find_and_load_unlocked\n",
-      "  File \"<frozen importlib._bootstrap>\", line 688, in _load_unlocked\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 883, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\n",
-      "  File \"C:\\Users\\vchar\\OneDrive\\Desktop\\ML Projects\\Upwork\\AlgoT_ML_Dev\\GrammarEvolution\\PonyGE2\\src\\fitness\\max_fitness.py\", line 1, in <module>\n",
-      "    from fitness.base_ff_classes.base_ff import base_ff\n",
-      "  File \"C:\\Users\\vchar\\OneDrive\\Desktop\\ML Projects\\Upwork\\AlgoT_ML_Dev\\GrammarEvolution\\PonyGE2\\src\\fitness\\base_ff_classes\\base_ff.py\", line 6, in <module>\n",
-      "    class base_ff:\n",
-      "  File \"C:\\Users\\vchar\\OneDrive\\Desktop\\ML Projects\\Upwork\\AlgoT_ML_Dev\\GrammarEvolution\\PonyGE2\\src\\fitness\\base_ff_classes\\base_ff.py\", line 15, in base_ff\n",
-      "    default_fitness = np.NaN\n",
-      "  File \"c:\\Users\\vchar\\anaconda3\\envs\\crypto_trading\\lib\\site-packages\\numpy\\__init__.py\", line 411, in __getattr__\n",
-      "    raise AttributeError(\n",
-      "AttributeError: `np.NaN` was removed in the NumPy 2.0 release. Use `np.nan` instead.. Did you mean: 'nan'?\n"
      ]
     }
    ],
    "source": [
-    "! python ponyge.py --fitness_function max_fitness --grammar_file test1.pybnf --population_size 500 --generations 100"
+    "! python ponyge.py --fitness_function max_fitness --grammar_file test2.pybnf --population_size 500 --generations 100"
    ]
   },
   {
