nan cases tested

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "    df = pd.read_csv(Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\datasets/\\BTCUSD_ohlcv.csv'))\n",
     "    # df = pd.read_csv('/kaggle/input/btcusd-test/BTCUSD_ohlcv.csv')\n",
     "    df['datetime'] = pd.to_datetime(df['datetime'])\n",
-    "    df = df.iloc[:10080]\n",
+    "    df = df.iloc[-10000:]\n",
     "    df.sort_values('datetime', ascending=True, inplace=True)\n",
     "    df.reset_index(inplace=True, drop=True)\n",
     "    return df"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -64,63 +64,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2021-12-31 20:00:00</td>\n",
-       "      <td>45690.5</td>\n",
-       "      <td>45868.0</td>\n",
-       "      <td>45643.5</td>\n",
-       "      <td>45814.5</td>\n",
-       "      <td>4949409.0</td>\n",
+       "      <td>2022-12-30 22:05:00</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.4</td>\n",
+       "      <td>16583.4</td>\n",
+       "      <td>4741.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2021-12-31 20:01:00</td>\n",
-       "      <td>45814.5</td>\n",
-       "      <td>45942.5</td>\n",
-       "      <td>45814.5</td>\n",
-       "      <td>45936.5</td>\n",
-       "      <td>2394867.0</td>\n",
+       "      <td>2022-12-30 22:06:00</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>22.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2021-12-31 20:02:00</td>\n",
-       "      <td>45936.5</td>\n",
-       "      <td>45936.5</td>\n",
-       "      <td>45851.0</td>\n",
-       "      <td>45914.0</td>\n",
-       "      <td>1714469.0</td>\n",
+       "      <td>2022-12-30 22:07:00</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.4</td>\n",
+       "      <td>16583.4</td>\n",
+       "      <td>34811.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2021-12-31 20:03:00</td>\n",
-       "      <td>45914.0</td>\n",
-       "      <td>45927.5</td>\n",
-       "      <td>45913.5</td>\n",
-       "      <td>45923.0</td>\n",
-       "      <td>705597.0</td>\n",
+       "      <td>2022-12-30 22:08:00</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>20.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2021-12-31 20:04:00</td>\n",
-       "      <td>45923.5</td>\n",
-       "      <td>45997.0</td>\n",
-       "      <td>45923.5</td>\n",
-       "      <td>45997.0</td>\n",
-       "      <td>3500805.0</td>\n",
+       "      <td>2022-12-30 22:09:00</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>5783.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             datetime     open     high      low    close     volume\n",
-       "0 2021-12-31 20:00:00  45690.5  45868.0  45643.5  45814.5  4949409.0\n",
-       "1 2021-12-31 20:01:00  45814.5  45942.5  45814.5  45936.5  2394867.0\n",
-       "2 2021-12-31 20:02:00  45936.5  45936.5  45851.0  45914.0  1714469.0\n",
-       "3 2021-12-31 20:03:00  45914.0  45927.5  45913.5  45923.0   705597.0\n",
-       "4 2021-12-31 20:04:00  45923.5  45997.0  45923.5  45997.0  3500805.0"
+       "             datetime     open     high      low    close   volume\n",
+       "0 2022-12-30 22:05:00  16583.5  16583.5  16583.4  16583.4   4741.0\n",
+       "1 2022-12-30 22:06:00  16583.5  16583.5  16583.5  16583.5     22.0\n",
+       "2 2022-12-30 22:07:00  16583.5  16583.5  16583.4  16583.4  34811.0\n",
+       "3 2022-12-30 22:08:00  16583.5  16583.5  16583.5  16583.5     20.0\n",
+       "4 2022-12-30 22:09:00  16583.5  16583.5  16583.5  16583.5   5783.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2206,21 +2206,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 86,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[38], line 53\u001b[0m\n\u001b[0;32m     51\u001b[0m buy_prices \u001b[38;5;241m=\u001b[39m df[df\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39misin(buy_idxs)]\u001b[38;5;241m.\u001b[39mopen\u001b[38;5;241m.\u001b[39mvalues\n\u001b[0;32m     52\u001b[0m sell_prices \u001b[38;5;241m=\u001b[39m df[df\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39misin(sell_idxs)]\u001b[38;5;241m.\u001b[39mopen\u001b[38;5;241m.\u001b[39mvalues\n\u001b[1;32m---> 53\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[43mbuy_idxs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m<\u001b[39m sell_idxs[\u001b[38;5;241m0\u001b[39m]:\n\u001b[0;32m     54\u001b[0m     buy_pnl \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(sell_prices \u001b[38;5;241m-\u001b[39m buy_prices)\n\u001b[0;32m     55\u001b[0m     sell_pnl \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(sell_prices[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m buy_prices[\u001b[38;5;241m1\u001b[39m:])\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numba import njit\n",
     "@njit\n",
@@ -2248,17 +2236,23 @@
     "    return drawdowns\n",
     "\n",
     "df = data.copy()\n",
-    "df['buy'] = (df.open % df.open < 0.1).astype(int)\n",
-    "df['sell'] = (0.5 == df.close).astype(int)\n",
-    "df['hold'] = (df.open % df.close > 1.7).astype(int)\n",
-    "df['signal'] = df['buy'] + df['sell'] + df.hold\n",
-    "df['signal'] = df['signal'].apply(lambda x: 1 if x==1 else 0)\n",
-    "df['hold'] = df.hold.apply(lambda x: 1 if x==0 else 0)\n",
-    "df['signal'] = df['signal'] * df['hold']\n",
-    "df['sell'] = df['sell'] * (-1)\n",
-    "df['signal'] = df['signal'] * df['sell']\n",
-    "df['signal'] = df['signal'] * df['buy']\n",
+    "# df_buy = (RSI(df, HistLength=5) < 20).astype(int).values\n",
+    "df = df.assign(buy=(RSI(df, HistLength=10) < 20).astype(int).values)\n",
+    "# df_sell = (RSI(df, HistLength=5) > 80).astype(int).values\n",
+    "df = df.assign(sell=(RSI(df, HistLength=10) > 80).astype(int).values)\n",
+    "# df_hold = ((RSI(df, HistLength=5)>20) & (RSI(df, HistLength=5)<80)).astype(int).values\n",
+    "# df = df.assign(hold=((RSI(df, HistLength=10)>=20) & (RSI(df, HistLength=10)<=80)).astype(int).values)\n",
+    "df = df.assign(signal = (df.buy + df.sell).values)\n",
+    "df.signal = df.signal.apply(lambda x: 1 if x==1 else 0)\n",
+    "# # df_signal = np.where(df_signal == 1, 1, 0)\n",
+    "# df.hold = df.hold.apply(lambda x: 1 if x==0 else 0)\n",
+    "# # df_hold = np.where(df_hold == 0, 1, 0)\n",
+    "# df.signal = df.signal * df.hold\n",
+    "df.sell = df.sell * (-1)\n",
+    "df.signal = df.signal * df.sell\n",
+    "df.signal = df.signal + df.buy\n",
     "#   df.drop(columns=[buy, sell, hold], inplace=True)\n",
+    "# del df_buy, df_sell, df_hold\n",
     "buy_idxs = []\n",
     "sell_idxs = []\n",
     "is_buy = 0\n",
@@ -2272,6 +2266,15 @@
     "        sell_idxs.append(i+1)\n",
     "        is_sell = 1\n",
     "        is_buy = 0\n",
+    "# for i, row in enumerate(df.signal):\n",
+    "#     if row == 1 and is_buy == 0:\n",
+    "#         buy_idxs.append(i+1)\n",
+    "#         is_buy = 1\n",
+    "#         is_sell = 0\n",
+    "#     elif row == -1 and is_sell == 0:\n",
+    "#         sell_idxs.append(i+1)\n",
+    "#         is_sell = 1\n",
+    "#         is_buy = 0\n",
     "buy_prices = df[df.index.isin(buy_idxs)].open.values\n",
     "sell_prices = df[df.index.isin(sell_idxs)].open.values\n",
     "if buy_idxs[0] < sell_idxs[0]:\n",
@@ -2297,42 +2300,356 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "27.55282632656368"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "buy_idxs"
+    "fitness"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>buy</th>\n",
+       "      <th>sell</th>\n",
+       "      <th>signal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-12-30 22:05:00</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.4</td>\n",
+       "      <td>16583.4</td>\n",
+       "      <td>4741.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-12-30 22:06:00</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-12-30 22:07:00</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.4</td>\n",
+       "      <td>16583.4</td>\n",
+       "      <td>34811.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-12-30 22:08:00</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-12-30 22:09:00</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>16583.5</td>\n",
+       "      <td>5783.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "[]"
+       "             datetime     open     high      low    close   volume  buy  sell  \\\n",
+       "0 2022-12-30 22:05:00  16583.5  16583.5  16583.4  16583.4   4741.0    0     0   \n",
+       "1 2022-12-30 22:06:00  16583.5  16583.5  16583.5  16583.5     22.0    0     0   \n",
+       "2 2022-12-30 22:07:00  16583.5  16583.5  16583.4  16583.4  34811.0    0     0   \n",
+       "3 2022-12-30 22:08:00  16583.5  16583.5  16583.5  16583.5     20.0    0     0   \n",
+       "4 2022-12-30 22:09:00  16583.5  16583.5  16583.5  16583.5   5783.0    0     0   \n",
+       "\n",
+       "   signal  \n",
+       "0       0  \n",
+       "1       0  \n",
+       "2       0  \n",
+       "3       0  \n",
+       "4       0  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sell_idxs"
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "557"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.buy.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-580"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sell.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "534"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.signal.sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(10000, 10)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "      <th>buy</th>\n",
+       "      <th>sell</th>\n",
+       "      <th>signal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>2023-01-06 20:40:00</td>\n",
+       "      <td>16937.5</td>\n",
+       "      <td>16946.6</td>\n",
+       "      <td>16937.5</td>\n",
+       "      <td>16938.4</td>\n",
+       "      <td>663549.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>2023-01-06 20:41:00</td>\n",
+       "      <td>16938.5</td>\n",
+       "      <td>16942.0</td>\n",
+       "      <td>16938.1</td>\n",
+       "      <td>16939.6</td>\n",
+       "      <td>355226.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>2023-01-06 20:42:00</td>\n",
+       "      <td>16939.7</td>\n",
+       "      <td>16939.7</td>\n",
+       "      <td>16935.9</td>\n",
+       "      <td>16935.9</td>\n",
+       "      <td>76556.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>2023-01-06 20:43:00</td>\n",
+       "      <td>16935.8</td>\n",
+       "      <td>16935.8</td>\n",
+       "      <td>16926.8</td>\n",
+       "      <td>16927.5</td>\n",
+       "      <td>260468.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>2023-01-06 20:44:00</td>\n",
+       "      <td>16927.5</td>\n",
+       "      <td>16927.6</td>\n",
+       "      <td>16927.3</td>\n",
+       "      <td>16927.3</td>\n",
+       "      <td>93071.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                datetime     open     high      low    close    volume  buy  \\\n",
+       "9995 2023-01-06 20:40:00  16937.5  16946.6  16937.5  16938.4  663549.0    0   \n",
+       "9996 2023-01-06 20:41:00  16938.5  16942.0  16938.1  16939.6  355226.0    0   \n",
+       "9997 2023-01-06 20:42:00  16939.7  16939.7  16935.9  16935.9   76556.0    0   \n",
+       "9998 2023-01-06 20:43:00  16935.8  16935.8  16926.8  16927.5  260468.0    0   \n",
+       "9999 2023-01-06 20:44:00  16927.5  16927.6  16927.3  16927.3   93071.0    0   \n",
+       "\n",
+       "      sell  signal  \n",
+       "9995     0       0  \n",
+       "9996     0       0  \n",
+       "9997     0       0  \n",
+       "9998     0       0  \n",
+       "9999     0       0  "
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.tail()"
    ]
   },
   {
